feat: use OkHttpProxy to send a request through proxy

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
             <artifactId>httpcore5</artifactId>
             <version>${apache-httpcomponents-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
